# opera-comique-graphdb

backend/: .gitignore  README.md  pyproject.toml
backend/data/: is_performed_edge.csv  performance_edge.csv  performance_nodes.csv  work_nodes.csv
backend/src/: __main__.py
backend/src/opera_comique_api/: __init__.py  main.py
backend/src/opera_comique_api/database/: __init__.py  connection.py  models.py  tables.py
backend/src/opera_comique_api/models/: edges.py  nodes.py  results.py
backend/src/opera_comique_api/routes/performances/: work.py  year.py
backend/tests/: fp_test.py
public/: is_performed_edge.csv  work_nodes.csv
